--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@
   }
 
   .title-font {
-    @apply text-4xl md:text-6xl;
+    @apply text-4xl md:text-5xl lg:text-7xl;
   }
 
   .title-gradient {
@@ -61,9 +61,17 @@
   }
 
   .button-gradient {
-    @apply px-8 py-4 bg-linear-to-r from-blue-600 to-cyan-500 text-white font-bold text-lg rounded-2xl shadow-lg hover:shadow-[0_0_50px_rgba(59,130,246,0.6)] hover:scale-110 hover:-translate-y-1 transition-all duration-300 active:scale-95 cursor-pointer;
+    @apply px-8 py-3 bg-linear-to-r from-blue-600 to-cyan-500 text-white font-bold text-lg rounded-2xl shadow-lg hover:shadow-[0_0_50px_rgba(59,130,246,0.6)] hover:scale-110 hover:-translate-y-1 transition-all duration-300 active:scale-95 cursor-pointer;
   }
   .feature-shadow {
     @apply shadow-[0_10px_30px_rgba(0,0,0,0.35)] hover:shadow-[0_20px_60px_rgba(59,130,246,0.35),0_0_25px_rgba(59,130,246,0.25)] transition-all duration-300;
+  }
+
+  .h-box {
+    @apply h-[calc(100%-3.5rem)];
+  }
+
+  .h-sidebar {
+    @apply h-[calc(100vh-3.5rem)];
   }
 }
